--- a/source/mainwindow.ui
+++ b/source/mainwindow.ui
@@ -102,7 +102,7 @@
      <x>0</x>
      <y>0</y>
      <width>430</width>
-     <height>30</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -132,7 +132,7 @@
   </widget>
   <action name="actionSet_Destination">
    <property name="text">
-    <string>Set Destination Path</string>
+    <string>Destination Path</string>
    </property>
   </action>
   <action name="actionRemove_original_files_after_encrypt">
